--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Mehran Mahmoudi</title>
 		<meta charset="utf-8" />
+		<meta name="theme-color" content="#000000">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
